GpCredits: fix overflow styles, hide polygons for mobile

--- a/src/assets/less/pages/globalping/credits.less
+++ b/src/assets/less/pages/globalping/credits.less
@@ -137,6 +137,7 @@
 			display: flex;
 			flex-direction: column;
 			row-gap: 40px;
+			overflow: hidden;
 
 			@media (min-width: @screen-sm-min) {
 				flex-flow: row wrap;
@@ -145,8 +146,13 @@
 			}
 
 			&_polygons {
+				display: none;
 				position: absolute;
 				z-index: -1;
+
+				@media (min-width: @screen-sm-min) {
+					display: block;
+				}
 
 				&.left {
 					top: 418px;
